# task_for_1_stage_to_programming_contest_if...else

./: .gitignore  README.md
Sources/: pyproject.toml
Sources/backend/api/animal_api/: serializers.py  views.py
Sources/backend/api/animal_api/migrations/: 0002_user_from_start_user_size.py  0003_location_alter_user_email_alter_user_firstname_and_more.py  0004_alter_location_point.py  0005_animal_alter_location_options_alter_user_options_and_more.py  0007_animaltypes_animal_alter_animaltypes_animal_type.py
Sources/backend/api/api/settings/: base.py  prod.py
